@@ -10,7 +10,8 @@ public record Style(@Nullable Color fg, @Nullable Color bg, Set<SGR> sgrSet) {
     public static final Style DEFAULT = new Style(null, null, new LinkedHashSet<>());
 
     public Style {
-        sgrSet = Set.copyOf(sgrSet);
+        // Collections.unmodifiableSet(...) instead of Set.copyOf(...) to preserve insertion order
+        sgrSet = Collections.unmodifiableSet(new LinkedHashSet<>(sgrSet));
     }
 
     public Style fg(TextColor color) {
@@ -41,7 +42,7 @@ public record Style(@Nullable Color fg, @Nullable Color bg, Set<SGR> sgrSet) {
         return withSGRs(List.of(sgr));
     }
 
-    public Style sgr(SGR ... sgrList) {
+    public Style sgr(SGR... sgrList) {
         return withSGRs(Arrays.asList(sgrList));
     }
 
@@ -70,7 +71,7 @@ public record Style(@Nullable Color fg, @Nullable Color bg, Set<SGR> sgrSet) {
     }
 
     private Style withSGRs(Iterable<SGR> sgrs) {
-        Set<SGR> copy = new HashSet<>(sgrSet);
+        Set<SGR> copy = new LinkedHashSet<>(sgrSet);
         for (SGR sgr : sgrs) {
             copy.add(sgr);
         }
